--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+span, strong, pre, p {
+  color: #171717;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2, h3, h4, h5, h6 {
+  color: #0d0d0d;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ol, ul {
+  list-style-type: none;
+}
+
+button {
+  background-color: transparent;
+  border-style: none;
+  cursor: pointer;
+}
+
+.link {
+  color: #171717;
+}
+
+.container {
+  width: 1100px;
+  margin: 0 auto;
+  position: relative;
+}
+
+/*   Nav Container   */
+.navContainer {
+  position: fixed;
+  width: 1100px;
+  height: 70px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgb(239, 239, 239);
+  background-color: white;
+}
+
+.iconList {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-content: center;
+}
+
+.iconContainer {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.iconContainer > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.logo {
+  margin: 0 auto;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.logo > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.sideMenu {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sideMenu > li {
+  padding-right: 10px;
+  color: #8f8f8f;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sideMenu > .login {
+  padding-right: 40px;
+}
+
+
+/*   Sidebar   */
+.sidebar {
+  padding-top: 300px;
 }
