Created the Home.js.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -6,10 +8,12 @@
 
 span, strong, pre, p {
   color: #171717;
+  font-family: 'Acme', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #0d0d0d;
+  font-family: 'Acme', sans-serif;
 }
 
 ol, ul {
@@ -20,11 +24,14 @@ button {
   background-color: transparent;
   border-style: none;
   cursor: pointer;
+  font-family: 'Acme', sans-serif;
+  color: #171717;
 }
 
 .link {
   color: #171717;
   text-decoration: none;
+  font-family: 'Acme', sans-serif;
 }
 
 .container {
@@ -41,6 +48,7 @@ button {
   padding-bottom: 5px;
   border-bottom: 1px solid rgb(239, 239, 239);
   background-color: white;
+  z-index: 999;
 }
 
 .iconList {
