--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ button {
   font-family: 'Acme', sans-serif;
 }
 
+.relative {
+  position: relative;
+}
+
 .container {
   width: 1100px;
   margin: 0 auto;
@@ -48,7 +52,7 @@ button {
   padding-bottom: 5px;
   border-bottom: 1px solid rgb(239, 239, 239);
   background-color: white;
-  z-index: 999;
+  z-index: 998;
 }
 
 .iconList {
