--- a/src/App.css
+++ b/src/App.css
@@ -38,16 +38,10 @@ button {
   position: relative;
 }
 
-.container {
-  width: 1100px;
-  margin: 0 auto;
-  position: relative;
-}
-
 /*   Nav Container   */
 .navContainer {
   position: fixed;
-  width: 1100px;
+  width: 100%;
   height: 70px;
   padding-bottom: 5px;
   border-bottom: 1px solid rgb(239, 239, 239);
@@ -56,10 +50,11 @@ button {
 }
 
 .iconList {
+  padding: 0 80px;
   height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  align-content: center;
+  align-items: center;
 }
 
 .iconContainer {
@@ -75,8 +70,8 @@ button {
 
 .logo {
   margin: 0 auto;
-  width: 1.8rem;
-  height: 1.8rem;
+  width: 150px;
+  height: auto;
 }
 
 .logo > img {
