--- a/src/App.css
+++ b/src/App.css
@@ -42,56 +42,61 @@ button {
 .navContainer {
   position: fixed;
   width: 100%;
-  height: 70px;
-  padding-bottom: 5px;
+  height: 100px;
   border-bottom: 1px solid rgb(239, 239, 239);
   background-color: white;
   z-index: 998;
 }
 
-.iconList {
+.navList {
   padding: 0 80px;
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 70px 7px;
   align-items: center;
 }
 
-.iconContainer {
+.navItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navMenu {
   width: 1.8rem;
   height: 1.8rem;
 }
 
-.iconContainer > img {
+.navMenu > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-.logo {
+.navLogo {
   margin: 0 auto;
   width: 150px;
   height: auto;
 }
 
-.logo > img {
+.navLogo > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-.sideMenu {
+.navSide {
   display: flex;
   justify-content: center;
 }
 
-.sideMenu > li {
-  padding-right: 10px;
-  color: #8f8f8f;
+.navSide > .login {
+  padding-right: 40px;
 }
 
-.sideMenu > .login {
-  padding-right: 40px;
+.navSide > li {
+  padding-right: 10px;
+  color: #8f8f8f;
 }
 
 
