--- a/src/pages/Sidebar.module.css
+++ b/src/pages/Sidebar.module.css
@@ -1,6 +1,7 @@
 :root {
+  --point-color: #A38568;
   --background-color: #fff;
-  --menu-items-color: #525252;
+  --menu-items-color: #555;
 }
 
 
@@ -44,7 +45,29 @@
   column-gap: 10px;
 }
 
-/*   Mypage   */
+
+/*   Hide Mypage   */
+.headerTitle {
+  font-size: 18px;
+  text-align: center;
+  margin: 50px auto;
+}
+
+.loginBtn {
+  display: block;
+  width: 100%;
+  height: 54px;
+  border-radius: 8px;
+  line-height: 54px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  background-color: var(--point-color);
+  color: #fff;
+}
+
+
+/*   Show Mypage   */
 .userImgContainer {
   width: 90px;
   height: 90px;
