--- a/src/pages/Detail.module.css
+++ b/src/pages/Detail.module.css
@@ -5,6 +5,7 @@
   --tab-background-color: #FAFAFA;
   --tab-border-color: #EEEEEE;
   --prod-info-color: #595858;
+  --info-color: #b5b5b5;
 }
 
 .container {
@@ -266,4 +267,44 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+
+/*   Review Page   */
+.reviewContainer {
+  width: 960px;
+  margin: 0 auto 100px;
+}
+
+.nonReview {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  margin: 50px;
+}
+
+.nonReview > .imgContainer {
+  width: 48px;
+  height: 48px;
+}
+
+.imgContainer > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.headerTitle {
+  color: var(--info-color);
+  font-size: 16px;
+  margin: 10px auto 50px;
+}
+
+.reviewBtn {
+  width: 138px;
+  height: 44px;
+  border-radius: 12px;
+  background-color: var(--point-color);
+  font-size: 16px;
+  color: #fff;
 }
