--- a/src/pages/Sidebar.module.css
+++ b/src/pages/Sidebar.module.css
@@ -116,10 +116,72 @@
 }
 
 
-/*   View   */
-.container > .title {
-  font-size: 15px;
-  font-weight: 600;
+/*  User Record   */
+.recentContainer {
+  height: 110px;
+  margin-bottom: 50px;
+}
+
+.recentContainer > .grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 7px;
+  overflow: hidden;
+}
+
+.cartContainer {
+  height: 250px;
+  overflow: hidden;
+}
+
+.cartContainer > .title {
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.moreBtn {
+  width: 14px;
+  height: 14px;
+}
+
+.moreBtn > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.cartContainer > .grid {
+  display: grid;
+  grid-template-columns: repeat(3, 79px);
+  grid-template-rows: repeat(2, 120px);
+  column-gap: 10px;
+  overflow: hidden;
+  margin-top: 8px;
+}
+
+.cartItem {
+  width: 100%;
+  height: 120px;
+  text-decoration: none;
+}
+
+.cartItem > .imgContainer {
+  width: 100%;
+  height: 80px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.cartItem > .imgContainer > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cartItem > span {
+  font-size: 14px;
 }
 
 
