Added the recent product function.

--- a/src/pages/Category.module.css
+++ b/src/pages/Category.module.css
@@ -52,12 +52,14 @@
 .prodInfo {
   display: flex;
   flex-direction: column;
+  margin-top: 5px;
 }
 
 .theme {
   color: var(--point-color);
   font-size: 14px;
   padding-bottom: 3px;
+  text-transform: uppercase;
 }
 
 .prodTitle {
