--- a/src/pages/Sidebar.module.css
+++ b/src/pages/Sidebar.module.css
@@ -118,15 +118,35 @@
 
 /*  User Record   */
 .recentContainer {
-  height: 110px;
-  margin-bottom: 50px;
+  height: 120px;
+  margin-bottom: 30px;
+  overflow: hidden;
 }
 
 .recentContainer > .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  column-gap: 7px;
+  column-gap: 5px;
   overflow: hidden;
+}
+
+.recentItem {
+  width: 100%;
+  height: 80px;
+  margin-top: 10px;
+}
+
+.recentItem > .imgContainer {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.recentItem > .imgContainer > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .cartContainer {
