Added mobile reactive style to Detail and Review.

--- a/src/pages/Review.module.css
+++ b/src/pages/Review.module.css
@@ -178,6 +178,179 @@
 }
 
 
+/*   Input Review Style   Max-Width: 360px   */
+@media screen and (max-width: 360px) {
+  .container {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+  }
+  
+  
+  /*   Header   */
+  .headerTitle {
+    display: flex;
+    position: relative;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--border-color);
+  }
+  
+  .headerTitle > .imgContainer {
+    width: 80px;
+    height: 80px;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  
+  .imgContainer > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .prodInfo {
+    margin-left: 10px;
+  }
+  
+  .prodInfo > h1 {
+    font-size: 14px;
+    font-weight: normal;
+  }
+  
+  .prodInfo > strong {
+    font-size: 18px;
+  }
+  
+  .closeBtn {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
+  
+  .closeBtn > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+
+  /*   Form Style   */
+  .formStyle {
+    padding: 40px 0;
+  }
+  
+  .userInfo {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 15px;
+    margin-bottom: 80px;
+  }
+  
+  .inputStyle {
+    height: 44px;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    padding: 10px;
+  }
+
+
+  /*   ProdOpinion Buttons    */
+  .prodOpinion {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+    place-items: center;
+    justify-content: normal;
+    margin-bottom: 80px;
+  }
+  
+  .opinionItem > h3 {
+    font-size: 14px;
+    font-weight: normal;
+    text-align: center;
+  }
+  
+  .btnContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 70px);
+    column-gap: 20px;
+    padding-top: 9px;
+  }
+  
+  .opinionBtn {
+    border: 1px solid var(--before-click);
+    color: var(--before-click);
+    border-radius: 15px;
+    padding: 5px 0;
+    font-size: 13px;
+  }
+  
+  .opinionBtn.click {
+    border-style: none;
+    background-color: var(--point-color);
+    color: #fff;
+  }
+
+
+  /*   Rate Style   */
+  .userRate {
+    text-align: center;
+    margin-bottom: 80px;
+  }
+  
+  .userRate > span {
+    font-size: 14px;
+  }
+  
+  .rateContainer {
+    display: grid;
+    grid-template-columns: repeat(5, 36px);
+    column-gap: 14px;
+    justify-content: center;
+    margin-top: 5px;
+  }
+  
+  .rateBtn {
+    width: 100%;
+    height: 36px;
+  }
+  
+  .rateBtn > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+
+  /*   Write Review Style   */
+  .userReview {
+    margin-bottom: 80px;
+    width: 100%;
+    height: 80px;
+  }
+  
+  .textareaStyle {
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    resize: none;
+  }
+
+  /*   Submit Button   */
+  .submitBtn {
+    width: 100%;
+    height: 44px;
+    border-radius: 8px;
+    background-color: var(--point-color);
+    color: #fff;
+    font-size: 14px;
+  }
+}
 
 
 /*   Show Review   */
@@ -256,7 +429,6 @@
 }
 
 
-/*   Options Container   */
 .optionsContainer {
   display: grid;
   grid-template-columns: repeat(2, 220px);
@@ -280,4 +452,128 @@
 
 .contentContainer {
   font-size: 14px;
+}
+
+
+/*   Show Review    Max-Width: 360px   */
+@media screen and (max-width: 360px) {
+  .reviewContainer {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 10px;
+    border-bottom: 1px solid var(--border-color);
+  }
+  
+  .reviewContainer > .headerTitle {
+    display: block;
+    border-style: none;
+    padding-bottom: 0;
+    position: relative;
+  }
+  
+  .userProfile {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
+  }
+  
+  .userProfile > .imgContainer {
+    width: 42px;
+    height: 42px;
+    margin-right: 10px;
+  }
+
+  .userProfile > h3 {
+    font-size: 15px;
+    position: absolute;
+    top: 0;
+    left: 50px;
+  }
+
+  .userInfoList {
+    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(2, 50px);
+    top: 18px;
+    left: 50px;
+  }
+  
+  .userInfoItem > span {
+    color: var(--side-color);
+    font-size: 13px;
+  }
+
+
+  /*   Options Container   */
+  .reviewInfo {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10px 57px 40px;
+    column-gap: 0;
+    row-gap: 13px;
+    justify-content: start;
+    margin: 5px 0 0 0;
+  }
+  
+  .reviewInfo > .rateContainer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 3px;
+    margin-top: 0;
+  }
+  
+  .rateImgContainer {
+    line-height: 0;
+    width: 13px;
+    height: 13px;
+  }
+  
+  .rateImgContainer > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  
+  .rateContainer > strong {
+    font-size: 14px;
+    padding-left: 0;
+  }
+  
+  .rateContainer > span {
+    font-size: 15px;
+    color: var(--side-color);
+    padding-left: 20px;
+  }
+
+
+  /*   Options Container   */
+  .optionsContainer {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 3px;
+    place-items: start;
+    padding: 8px;
+    border: 2px dotted #cdcdcd;
+    border-radius: 12px;
+  }
+  
+  .option {
+    font-size: 12px;
+  }
+  
+  .option > span {
+    color: var(--review-color);
+  }
+  
+  .option > strong {
+    color: var(--point-color);
+  }
+  
+  .contentContainer {
+    font-size: 12px;
+  }
 }
