--- a/src/pages/Cart.module.css
+++ b/src/pages/Cart.module.css
@@ -18,7 +18,7 @@
 
 .grid {
   display: grid;
-  grid-template-rows: repeat(5, 110px);
+  grid-template-rows: 110px;
   row-gap: 10px;
 }
 
@@ -66,6 +66,99 @@
   object-fit: contain;
 }
 
+@media screen and (max-width: 360px) {
+  .container {
+    padding: 100px 17px 50px;
+    width: 360px;
+    margin: 0;
+  }
+  
+  .headerTitle {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 40px;
+  }
+  
+  .content {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 15px;
+    column-gap: 0;
+  }
+  
+  .grid {
+    display: grid;
+    grid-template-columns: 326px;
+    grid-template-rows: 100px;
+    row-gap: 10px;
+  }
+  
+  
+  /*    Cart Container   */
+  .cartContainer {
+    position: relative;
+    display: block;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #d8d8d8;
+  }
+  
+  .cartHeader {
+    display: block;
+    align-items: normal;
+    text-decoration: none;
+  }
+  
+  .cartHeader > .imgContainer {
+    width: 90px;
+    height: 90px;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-right: 10px;
+  }
+  
+  .imgContainer > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .cartHeader > h4 {
+    position: absolute;
+    top: 3px;
+    left: 97px;
+    font-size: 15px;
+  }
+
+  .cartContainer > span {
+    position: absolute;
+    top: 60px;
+    left: 177px;
+    font-size: 14px;
+    color: var(--menu-items-color);
+  }
+
+  .cartContainer > strong {
+    position: absolute;
+    top: 58px;
+    left: 97px;
+    font-size: 16px;
+  }
+  
+  .deleteBtn {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  
+  .deleteBtn > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
 
 /*   Result   */
 .resultContainer {
@@ -88,4 +181,31 @@
 
 .result {
   font-size: 21px;
+}
+
+
+/*   Max-Width: 360px   */
+@media screen and (max-width: 360px) {
+  /*   Result   */
+  .resultContainer {
+    background-color: #FAFAFA;
+    padding: 10px;
+  }
+  
+  .item {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+  }
+  
+  .resultItem {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+    align-items: center;
+  }
+  
+  .result {
+    font-size: 21px;
+  }
 }
