--- a/src/pages/Sidebar.module.css
+++ b/src/pages/Sidebar.module.css
@@ -1,10 +1,3 @@
-:root {
-  --point-color: #A38568;
-  --background-color: #fff;
-  --menu-items-color: #555;
-}
-
-
 /*   Sidebar   */
 .sidebar {
   background-color: #BCB6F0;
@@ -297,7 +290,7 @@
 
   .grid {
     display: grid;
-    grid-template-columns: 297px;
+    grid-template-columns: 100%;
     row-gap: 15px;
   }
 
@@ -329,5 +322,33 @@
     font-size: 15px;
     background-color: var(--point-color);
     color: #fff;
+  }
+
+
+  /*   Show Mypage   */
+  .stateContainer {
+    width: 100%;
+    height: auto;
+    margin-top: 50px;
+  }
+
+
+  /*   User Record   */
+  .cartContainer > .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 106px);
+    column-gap: 10px;
+    overflow: hidden;
+    margin-top: 8px;
+  }
+
+
+  /*   Theme   */
+  .themeContainer > .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 20px;
+    padding-top: 5px;
   }
 }
