--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -218,6 +218,40 @@
   }
 
 
+  /*   Search Box   */
+  .searchBox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    height: 45px;
+    margin: 30px 17px 18px;
+    padding: 0 10px;
+    border: 1px solid var(--point-color);
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 0 8px var(--border-color);
+    text-decoration: none;
+  }
+
+  .searchBox > h3 {
+    font-weight: normal;
+    font-size: 15px;
+    color: var(--side-color);
+  }
+
+  .searchBtn {
+    width: 22px;
+    height: 22px;
+  }
+
+  .searchBtn > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+
   /*   Banner   */
   .banner {
     margin: 40px auto;
